defined bedroom 2 and items in it

--- a/your-code/sample-code.ipynb
+++ b/your-code/sample-code.ipynb
@@ -8,6 +8,38 @@
    "source": [
     "# define rooms and items\n",
     "\n",
+    "key_d{\n",
+    "    \"name\": \"key for door d\",\n",
+    "    \"type\": \"key\",\n",
+    "    \"target\": door_d\n",
+    "}\n",
+    "\n",
+    "key_c{\n",
+    "    \"name\": \"key for door c\",\n",
+    "    \"type\": \"key\",\n",
+    "    \"target\": door_c\n",
+    "}\n",
+    "\n",
+    "dresser{\n",
+    "    \"name\": \"dresser\",\n",
+    "    \"type\": \"furniture\"\n",
+    "}\n",
+    "\n",
+    "double_bed{\n",
+    "    \"name\": \"double bed\",\n",
+    "    \"type\": \"furniture\"\n",
+    "}\n",
+    "\n",
+    "door_b = {\n",
+    "    \"name\": \"door b\",\n",
+    "    \"type\": \"door\"\n",
+    "}\n",
+    "\n",
+    "bedroom_2 = {\n",
+    "    \"name\": \"bedroom 2\",\n",
+    "    \"type\": \"room\"\n",
+    "}\n",
+    "\n",
     "couch = {\n",
     "    \"name\": \"couch\",\n",
     "    \"type\": \"furniture\",\n",
@@ -38,9 +70,9 @@
     "  \"name\": \"outside\"\n",
     "}\n",
     "\n",
-    "all_rooms = [game_room, outside]\n",
+    "all_rooms = [game_room, bedroom_2, outside]\n",
     "\n",
-    "all_doors = [door_a]\n",
+    "all_doors = [door_a, door_b]\n",
     "\n",
     "# define which items/rooms are related\n",
     "\n",
@@ -48,7 +80,11 @@
     "    \"game room\": [couch, piano, door_a],\n",
     "    \"piano\": [key_a],\n",
     "    \"outside\": [door_a],\n",
-    "    \"door a\": [game_room, outside]\n",
+    "    \"door a\": [game_room, outside],\n",
+    "    \"bedroom 2\": [double_bed, dresser, key_c, key_d, door_b],\n",
+    "    \"double bed\": [key_c],\n",
+    "    \"dresser\": [key_d],\n",
+    "    \"door b\": [bedroom_1, bedroom_2]\n",
     "}\n",
     "\n",
     "# define game state. Do not directly change this dict. \n",
@@ -162,7 +198,7 @@
     "    if(output is None):\n",
     "        print(\"The item you requested is not found in the current room.\")\n",
     "    \n",
-    "    if(next_room and input(\"Do you want to go to the next room? Ener 'yes' or 'no'\").strip() == 'yes'):\n",
+    "    if(next_room and input(\"Do you want to go to the next room? Enter 'yes' or 'no'\").strip() == 'yes'):\n",
     "        play_room(next_room)\n",
     "    else:\n",
     "        play_room(current_room)"
@@ -240,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
