--- a/your-code/sample-code.ipynb
+++ b/your-code/sample-code.ipynb
@@ -2,30 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-504b67bfccd7>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-504b67bfccd7>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    key_d{\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# define rooms and items\n",
     "\n",
-    "key_d{\n",
+    "key_d = {\n",
     "    \"name\": \"key for door d\",\n",
     "    \"type\": \"key\",\n",
     "    \"target\": door_d\n",
     "}\n",
     "\n",
-    "key_c{\n",
+    "key_c = {\n",
     "    \"name\": \"key for door c\",\n",
     "    \"type\": \"key\",\n",
     "    \"target\": door_c\n",
     "}\n",
     "\n",
-    "dresser{\n",
+    "dresser = {\n",
     "    \"name\": \"dresser\",\n",
     "    \"type\": \"furniture\"\n",
     "}\n",
     "\n",
-    "double_bed{\n",
+    "double_bed = {\n",
     "    \"name\": \"double bed\",\n",
     "    \"type\": \"furniture\"\n",
     "}\n",
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,12 +138,12 @@
     "        print(\"Congrats! You escaped the room!\")\n",
     "    else:\n",
     "        print(\"You are now in \" + room[\"name\"])\n",
-    "        intended_action = input(\"What would you like to do? Type 'explore' or 'examine'?\").strip()\n",
+    "        intended_action = input(\"What would you like to do? Type 'explore' or 'examine'? \").strip()\n",
     "        if intended_action == \"explore\":\n",
     "            explore_room(room)\n",
     "            play_room(room)\n",
     "        elif intended_action == \"examine\":\n",
-    "            examine_item(input(\"What would you like to examine?\").strip())\n",
+    "            examine_item(input(\"What would you like to examine? \").strip())\n",
     "        else:\n",
     "            print(\"Not sure what you mean. Type 'explore' or 'examine'.\")\n",
     "            play_room(room)\n",
@@ -198,7 +207,7 @@
     "    if(output is None):\n",
     "        print(\"The item you requested is not found in the current room.\")\n",
     "    \n",
-    "    if(next_room and input(\"Do you want to go to the next room? Enter 'yes' or 'no'\").strip() == 'yes'):\n",
+    "    if(next_room and input(\"Do you want to go to the next room? Enter 'yes' or 'no': \").strip() == 'yes'):\n",
     "        play_room(next_room)\n",
     "    else:\n",
     "        play_room(current_room)"
@@ -206,43 +215,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\n",
-      "You are now in game room\n",
-      "What would you like to do? Type 'explore' or 'examine'?explore\n",
-      "You explore the room. This is game room. You find couch, piano, door a\n",
-      "You are now in game room\n",
-      "What would you like to do? Type 'explore' or 'examine'?examine\n",
-      "What would you like to examine?door a\n",
-      "You examine door a. It is locked but you don't have the key.\n",
-      "You are now in game room\n",
-      "What would you like to do? Type 'explore' or 'examine'?examine\n",
-      "What would you like to examine?piano\n",
-      "You examine piano. You find key for door a.\n",
-      "You are now in game room\n",
-      "What would you like to do? Type 'explore' or 'examine'?examine\n",
-      "What would you like to examine?door a\n",
-      "You examine door a. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Ener 'yes' or 'no'yes\n",
-      "Congrats! You escaped the room!\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'INIT_GAME_STATE' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-2c0d15a1ff83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgame_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mINIT_GAME_STATE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mstart_game\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'INIT_GAME_STATE' is not defined"
      ]
     }
    ],
