--- a/your-code/sample-code.ipynb
+++ b/your-code/sample-code.ipynb
@@ -2,55 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-504b67bfccd7>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-4-b3f21fcb852a>, line 117)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-504b67bfccd7>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    key_d{\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-b3f21fcb852a>\"\u001b[1;36m, line \u001b[1;32m117\u001b[0m\n\u001b[1;33m    \"living room\":[door_d, outside],\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# define rooms and items\n",
     "\n",
-    "key_d = {\n",
-    "    \"name\": \"key for door d\",\n",
-    "    \"type\": \"key\",\n",
-    "    \"target\": door_d\n",
+    "couch = {\n",
+    "    \"name\": \"couch\",\n",
+    "    \"type\": \"furniture\",\n",
     "}\n",
     "\n",
-    "key_c = {\n",
-    "    \"name\": \"key for door c\",\n",
-    "    \"type\": \"key\",\n",
-    "    \"target\": door_c\n",
-    "}\n",
-    "\n",
-    "dresser = {\n",
-    "    \"name\": \"dresser\",\n",
-    "    \"type\": \"furniture\"\n",
+    "queen_bed = {\n",
+    "    \"name\": \"queen bed\",\n",
+    "    \"type\": \"furniture\",\n",
     "}\n",
     "\n",
     "double_bed = {\n",
     "    \"name\": \"double bed\",\n",
-    "    \"type\": \"furniture\"\n",
+    "    \"type\": \"furniture\",\n",
     "}\n",
     "\n",
-    "door_b = {\n",
-    "    \"name\": \"door b\",\n",
-    "    \"type\": \"door\"\n",
+    "dresser = {\n",
+    "    \"name\": \"dresser\",\n",
+    "    \"type\": \"furniture\",\n",
     "}\n",
     "\n",
-    "bedroom_2 = {\n",
-    "    \"name\": \"bedroom 2\",\n",
-    "    \"type\": \"room\"\n",
-    "}\n",
-    "\n",
-    "couch = {\n",
-    "    \"name\": \"couch\",\n",
+    "dining_table = {\n",
+    "    \"name\": \"dinig table\",\n",
     "    \"type\": \"furniture\",\n",
     "}\n",
     "\n",
@@ -59,10 +47,43 @@
     "    \"type\": \"door\",\n",
     "}\n",
     "\n",
+    "door_b = {\n",
+    "    \"name\": \"door b\",\n",
+    "    \"type\": \"door\",\n",
+    "}\n",
+    "\n",
+    "door_c = {\n",
+    "    \"name\": \"door c\",\n",
+    "    \"type\": \"door\",\n",
+    "}\n",
+    "\n",
+    "door_d = {\n",
+    "    \"name\": \"door d\",\n",
+    "    \"type\": \"door\",\n",
+    "}\n",
+    "\n",
     "key_a = {\n",
     "    \"name\": \"key for door a\",\n",
     "    \"type\": \"key\",\n",
     "    \"target\": door_a,\n",
+    "}\n",
+    "\n",
+    "key_b = {\n",
+    "    \"name\": \"key for door b\",\n",
+    "    \"type\": \"key\",\n",
+    "    \"target\": door_b,\n",
+    "}\n",
+    "\n",
+    "key_c = {\n",
+    "    \"name\": \"key for door c\",\n",
+    "    \"type\": \"key\",\n",
+    "    \"target\": door_c,\n",
+    "}\n",
+    "\n",
+    "key_d = {\n",
+    "    \"name\": \"key for door d\",\n",
+    "    \"type\": \"key\",\n",
+    "    \"target\": door_d,\n",
     "}\n",
     "\n",
     "piano = {\n",
@@ -75,25 +96,43 @@
     "    \"type\": \"room\",\n",
     "}\n",
     "\n",
+    "bedroom_1 = {\n",
+    "    \"name\": \"bedroom 1\",\n",
+    "    \"type\": \"room\",\n",
+    "}\n",
+    "\n",
+    "bedroom_2 = {\n",
+    "    \"name\": \"bedroom 2\",\n",
+    "    \"type\": \"room\",\n",
+    "}\n",
+    "\n",
+    "living_room = {\n",
+    "    \"name\": \"living room\",\n",
+    "    \"type\": \"room\",\n",
+    "}\n",
+    "\n",
     "outside = {\n",
     "  \"name\": \"outside\"\n",
     "}\n",
     "\n",
-    "all_rooms = [game_room, bedroom_2, outside]\n",
+    "all_rooms = [game_room, outside, bedroom_1, bedroom_2, living_room]\n",
     "\n",
-    "all_doors = [door_a, door_b]\n",
+    "all_doors = [door_a, door_b, door_c, door_d]\n",
     "\n",
     "# define which items/rooms are related\n",
     "\n",
     "object_relations = {\n",
     "    \"game room\": [couch, piano, door_a],\n",
     "    \"piano\": [key_a],\n",
-    "    \"outside\": [door_a],\n",
-    "    \"door a\": [game_room, outside],\n",
-    "    \"bedroom 2\": [double_bed, dresser, key_c, key_d, door_b],\n",
-    "    \"double bed\": [key_c],\n",
-    "    \"dresser\": [key_d],\n",
-    "    \"door b\": [bedroom_1, bedroom_2]\n",
+    "    \"queen bed\": [key_b],\n",
+    "    \"outside\": [door_d],\n",
+    "    \"bedroom 1\": [queen_bed, key_b, door_a, door_b, door_c],\n",
+    "    \"door a\": [game_room, bedroom_1],\n",
+    "    \"door b\": [bedroom_1, bedroom_2],\n",
+    "    \"door c\": [bedroom_1, living_room],\n",
+    "    \"door d\": [outside, living_room]\n",
+    "    \"living room\":[door_d, outside],\n",
+    "    \n",
     "}\n",
     "\n",
     "# define game state. Do not directly change this dict. \n",
@@ -104,13 +143,13 @@
     "INIT_GAME_STATE = {\n",
     "    \"current_room\": game_room,\n",
     "    \"keys_collected\": [],\n",
-    "    \"target_room\": outside\n",
+    "    \"target_room\": outside,\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,10 +262,10 @@
      "evalue": "name 'INIT_GAME_STATE' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-2c0d15a1ff83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgame_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mINIT_GAME_STATE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mstart_game\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'INIT_GAME_STATE' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-2c0d15a1ff83>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgame_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mINIT_GAME_STATE\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mstart_game\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'INIT_GAME_STATE' is not defined"
      ]
     }
    ],
@@ -260,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
