--- a/your-code/sample-code.ipynb
+++ b/your-code/sample-code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
     "    \"queen bed\": [key_b],\n",
     "    \"outside\": [door_d],\n",
     "    \"door c\": [bedroom_1, living_room],\n",
-    "    \"door d\": [outside, living_room]\n",
+    "    \"door d\": [outside, living_room],\n",
     "    \"bedroom 1\": [door_a, door_b, door_c, queen_bed],\n",
     "    \"bedroom 2\": [double_bed, dresser, door_b],\n",
     "    \"double bed\": [key_c],\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\n",
+      "You are now in game room\n"
+     ]
+    }
+   ],
    "source": [
     "game_state = INIT_GAME_STATE.copy()\n",
     "\n",
@@ -281,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
