screated copy of sample functions

--- a/your-code/sample-code.ipynb
+++ b/your-code/sample-code.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,57 @@
       "What would you like to do? Type 'explore' or 'examine'? examine\n",
       "What would you like to examine? dining table\n",
       "You examine dining table. There isn't anything interesting about it.\n",
-      "You are now in living room\n"
+      "You are now in living room\n",
+      "What would you like to do? Type 'explore' or 'examine'? examine\n",
+      "What would you like to examine? door d\n",
+      "You examine door d. You unlock it with a key you have.\n",
+      "Do you want to go to the next room? Enter 'yes' or 'no': yes\n",
+      "Congrats! You escaped the room!\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
