added file functions_secure.ipynb

--- a/your-code/functions_secured.ipynb
+++ b/your-code/functions_secured.ipynb
@@ -6,6 +6,144 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define rooms and items\n",
+    "\n",
+    "couch = {\n",
+    "    \"name\": \"couch\",\n",
+    "    \"type\": \"furniture\",\n",
+    "}\n",
+    "\n",
+    "queen_bed = {\n",
+    "    \"name\": \"queen bed\",\n",
+    "    \"type\": \"furniture\",\n",
+    "}\n",
+    "\n",
+    "double_bed = {\n",
+    "    \"name\": \"double bed\",\n",
+    "    \"type\": \"furniture\",\n",
+    "}\n",
+    "\n",
+    "dresser = {\n",
+    "    \"name\": \"dresser\",\n",
+    "    \"type\": \"furniture\",\n",
+    "}\n",
+    "\n",
+    "dining_table = {\n",
+    "    \"name\": \"dining table\",\n",
+    "    \"type\": \"furniture\",\n",
+    "}\n",
+    "\n",
+    "door_a = {\n",
+    "    \"name\": \"door a\",\n",
+    "    \"type\": \"door\",\n",
+    "}\n",
+    "\n",
+    "door_b = {\n",
+    "    \"name\": \"door b\",\n",
+    "    \"type\": \"door\",\n",
+    "}\n",
+    "\n",
+    "door_c = {\n",
+    "    \"name\": \"door c\",\n",
+    "    \"type\": \"door\",\n",
+    "}\n",
+    "\n",
+    "door_d = {\n",
+    "    \"name\": \"door d\",\n",
+    "    \"type\": \"door\",\n",
+    "}\n",
+    "\n",
+    "key_a = {\n",
+    "    \"name\": \"key for door a\",\n",
+    "    \"type\": \"key\",\n",
+    "    \"target\": door_a,\n",
+    "}\n",
+    "\n",
+    "key_b = {\n",
+    "    \"name\": \"key for door b\",\n",
+    "    \"type\": \"key\",\n",
+    "    \"target\": door_b,\n",
+    "}\n",
+    "\n",
+    "key_c = {\n",
+    "    \"name\": \"key for door c\",\n",
+    "    \"type\": \"key\",\n",
+    "    \"target\": door_c,\n",
+    "}\n",
+    "\n",
+    "key_d = {\n",
+    "    \"name\": \"key for door d\",\n",
+    "    \"type\": \"key\",\n",
+    "    \"target\": door_d,\n",
+    "}\n",
+    "\n",
+    "piano = {\n",
+    "    \"name\": \"piano\",\n",
+    "    \"type\": \"furniture\",\n",
+    "}\n",
+    "\n",
+    "game_room = {\n",
+    "    \"name\": \"game room\",\n",
+    "    \"type\": \"room\",\n",
+    "}\n",
+    "\n",
+    "bedroom_1 = {\n",
+    "    \"name\": \"bedroom 1\",\n",
+    "    \"type\": \"room\",\n",
+    "}\n",
+    "\n",
+    "bedroom_2 = {\n",
+    "    \"name\": \"bedroom 2\",\n",
+    "    \"type\": \"room\",\n",
+    "}\n",
+    "\n",
+    "living_room = {\n",
+    "    \"name\": \"living room\",\n",
+    "    \"type\": \"room\",\n",
+    "}\n",
+    "\n",
+    "outside = {\n",
+    "  \"name\": \"outside\"\n",
+    "}\n",
+    "\n",
+    "all_rooms = [game_room, bedroom_1, bedroom_2, living_room, outside]\n",
+    "\n",
+    "all_doors = [door_a, door_b, door_c, door_d]\n",
+    "\n",
+    "# define which items/rooms are related\n",
+    "\n",
+    "object_relations = {\n",
+    "    \"outside\": [door_d],\n",
+    "    \"game room\": [couch, piano, door_a],\n",
+    "    \"piano\": [key_a],\n",
+    "    \"queen bed\": [key_b],\n",
+    "    \"outside\": [door_d],\n",
+    "    \"door c\": [bedroom_1, living_room],\n",
+    "    \"door d\": [outside, living_room],\n",
+    "    \"bedroom 1\": [door_a, door_b, door_c, queen_bed],\n",
+    "    \"bedroom 2\": [double_bed, dresser, door_b],\n",
+    "    \"double bed\": [key_c],\n",
+    "    \"dresser\": [key_d],\n",
+    "    \"door a\": [game_room, bedroom_1],\n",
+    "    \"door b\": [bedroom_1, bedroom_2],\n",
+    "    \"living room\": [dining_table, door_d, door_c]\n",
+    "}\n",
+    "\n",
+    "# define game state. Do not directly change this dict. \n",
+    "# Instead, when a new game starts, make a copy of this\n",
+    "# dict and use the copy to store gameplay state. This \n",
+    "# way you can replay the game multiple times.\n",
+    "\n",
+    "INIT_GAME_STATE = {\n",
+    "    \"current_room\": game_room,\n",
+    "    \"keys_collected\": [],\n",
+    "    \"target_room\": outside,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "def linebreak():\n",
     "    \"\"\"\n",
     "    Print a line break\n",
@@ -16,16 +154,20 @@
     "    \"\"\"\n",
     "    Start the game\n",
     "    \"\"\"\n",
+    "    # player should not have access to variable where game state is stored\n",
+    "    game_state = INIT_GAME_STATE.copy()\n",
+    "    \n",
     "    print(\"You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\")\n",
-    "    play_room(game_state[\"current_room\"])\n",
+    "    play_room(game_state)\n",
     "\n",
-    "def play_room(room):\n",
+    "def play_room(game_state):\n",
     "    \"\"\"\n",
     "    Play a room. First check if the room being played is the target room.\n",
     "    If it is, the game will end with success. Otherwise, let player either \n",
     "    explore (list all items in this room) or examine an item found here.\n",
     "    \"\"\"\n",
-    "    game_state[\"current_room\"] = room\n",
+    "    room = game_state[\"current_room\"]\n",
+    "    \n",
     "    if(game_state[\"current_room\"] == game_state[\"target_room\"]):\n",
     "        print(\"Congrats! You escaped the room!\")\n",
     "    else:\n",
@@ -33,12 +175,12 @@
     "        intended_action = input(\"What would you like to do? Type 'explore' or 'examine'? \").strip()\n",
     "        if intended_action == \"explore\":\n",
     "            explore_room(room)\n",
-    "            play_room(room)\n",
+    "            play_room(game_state)\n",
     "        elif intended_action == \"examine\":\n",
-    "            examine_item(input(\"What would you like to examine? \").strip())\n",
+    "            examine_item(input(\"What would you like to examine? \").strip(), game_state)\n",
     "        else:\n",
     "            print(\"Not sure what you mean. Type 'explore' or 'examine'.\")\n",
-    "            play_room(room)\n",
+    "            play_room(game_state)\n",
     "        linebreak()\n",
     "\n",
     "def explore_room(room):\n",
@@ -58,7 +200,7 @@
     "        if(not current_room == room):\n",
     "            return room\n",
     "\n",
-    "def examine_item(item_name):\n",
+    "def examine_item(item_name, game_state):\n",
     "    \"\"\"\n",
     "    Examine an item which can be a door or furniture.\n",
     "    First make sure the intended item belongs to the current room.\n",
@@ -100,10 +242,27 @@
     "        print(\"The item you requested is not found in the current room.\")\n",
     "    \n",
     "    if(next_room and input(\"Do you want to go to the next room? Enter 'yes' or 'no': \").strip() == 'yes'):\n",
-    "        play_room(next_room)\n",
+    "        #game_state[\"current_room\"] = next_room\n",
+    "        play_room(game_state)\n",
     "    else:\n",
-    "        play_room(current_room)"
+    "        play_room(game_state)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_game()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
