added weather dictionary and function to generate temperatures

--- a/your-code/functions_secured.ipynb
+++ b/your-code/functions_secured.ipynb
@@ -7,6 +7,13 @@
    "outputs": [],
    "source": [
     "# define rooms and items\n",
+    "import random\n",
+    "\n",
+    "weather = {\n",
+    "    \"sunny\": \"sunglasses\",\n",
+    "    \"rainy\": \"umbrella\",\n",
+    "    \"snowing\": \"snow boots\",\n",
+    "}\n",
     "\n",
     "couch = {\n",
     "    \"name\": \"couch\",\n",
@@ -242,10 +249,24 @@
     "        print(\"The item you requested is not found in the current room.\")\n",
     "    \n",
     "    if(next_room and input(\"Do you want to go to the next room? Enter 'yes' or 'no': \").strip() == 'yes'):\n",
-    "        #game_state[\"current_room\"] = next_room\n",
     "        play_room(game_state)\n",
     "    else:\n",
-    "        play_room(game_state)"
+    "        play_room(game_state)\n",
+    "\n",
+    "def get_temperature_outside():\n",
+    "    t = random.randrange(-10, 40, 1)\n",
+    "    print(f\"It's {t}ºC outside.\")\n",
+    "    lst = weather.keys()\n",
+    "    if t<0:\n",
+    "        print(\"Why not put on some snow boots?\")\n",
+    "        return lst[0], weather[0]\n",
+    "    elif t>20:\n",
+    "        print(\"Put on some sunglasses.\")\n",
+    "        return lst[2], weather[2]\n",
+    "    else:\n",
+    "        print(\"Don't forget your umbrella!\")\n",
+    "        return lst[1], weather[1]\n",
+    "    "
    ]
   },
   {
