--- a/your-code/game.ipynb
+++ b/your-code/game.ipynb
@@ -2,18 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define rooms and items\n",
     "import random\n",
-    "\n",
-    "weather = {\n",
-    "    \"sunny\": sunglasses,\n",
-    "    \"rainy\": umbrella,\n",
-    "    \"snowing\": snow_boots,\n",
-    "}\n",
     "\n",
     "sunglasses = {\n",
     "    \"name\": \"sunglasses\",\n",
@@ -28,6 +22,12 @@
     "snow_boots = {\n",
     "    \"name\": \"snow boots\",\n",
     "    \"type\": \"object\",\n",
+    "}\n",
+    "\n",
+    "weather = {\n",
+    "    \"sunny\": sunglasses,\n",
+    "    \"rainy\": umbrella,\n",
+    "    \"snowing\": snow_boots,\n",
     "}\n",
     "\n",
     "coat_hanger = {\n",
@@ -153,7 +153,7 @@
     "    \"dresser\": [key_d],\n",
     "    \"door a\": [game_room, bedroom_1],\n",
     "    \"door b\": [bedroom_1, bedroom_2],\n",
-    "    \"living room\": [dining_table, coat_hanger, door_d, door_c],\n",
+    "    \"living room\": [dining_table, coat_hanger, door_c, door_d],\n",
     "    \"dining table\": [sunglasses],\n",
     "    \"couch\": [snow_boots],\n",
     "    \"coat hanger\": [umbrella]\n",
@@ -175,6 +175,30 @@
     "\n",
     "\n",
     "\n",
+    "def printmap(room):\n",
+    "    \"\"\"\n",
+    "    Print a tiny map of the house\n",
+    "    with the current position marked\n",
+    "    \"\"\"\n",
+    "    print(\"+------+-------------+----D---+\")\n",
+    "    print(\"|      |             |        |\")\n",
+    "    print(\"|      |  BEDROOM 2  |        |\")\n",
+    "    if room == bedroom_2:\n",
+    "        print(\"| GAME |      *      | LIVING |\")\n",
+    "    else:\n",
+    "        print(\"| GAME |             | LIVING |\")\n",
+    "    print(\"| ROOM |------B------+  ROOM  |\")\n",
+    "    if room == game_room:\n",
+    "        print(\"|  *   |             |        |\")\n",
+    "    elif room == living_room:\n",
+    "        print(\"|      |             |    *   |\")\n",
+    "    else: print(\"|      |             |        |\")\n",
+    "    print(\"|      A  BEDROOM 1  C        |\")\n",
+    "    if room == bedroom_1:\n",
+    "        print(\"|      |      *      |        |\")\n",
+    "    else: print(\"|      |             |        |\")\n",
+    "    print(\"+------+-------------+--------+\")\n",
+    "    \n",
     "def linebreak():\n",
     "    \"\"\"\n",
     "    Print a line break\n",
@@ -198,7 +222,11 @@
     "    if(game_state[\"current_room\"] == game_state[\"target_room\"]):\n",
     "        print(\"Congrats! You escaped the room!\")\n",
     "    else:\n",
-    "        print(\"You are now in \" + room[\"name\"])\n",
+    "        \n",
+    "        \n",
+    "        linebreak()\n",
+    "        \n",
+    "        print(\"You are now in \" + room[\"name\"].upper() + \".\")\n",
     "        intended_action = input(\"What would you like to do? Type 'explore' or 'examine'? \").strip()\n",
     "        if intended_action == \"explore\":\n",
     "            explore_room(room)\n",
@@ -228,7 +256,9 @@
     "    \"\"\"\n",
     "    Explore a room. List all items belonging to this room.\n",
     "    \"\"\"\n",
-    "    items = [i[\"name\"] for i in object_relations[room[\"name\"]]]\n",
+    "    items = [i[\"name\"].upper() for i in object_relations[room[\"name\"]]]\n",
+    "    linebreak()\n",
+    "    printmap(room)\n",
     "    print(\"You explore the room. This is \" + room[\"name\"] + \". You find \" + \", \".join(items))\n",
     "\n",
     "def get_next_room_of_door(door, current_room):\n",
@@ -255,10 +285,12 @@
     "    current_room = game_state[\"current_room\"]\n",
     "    next_room = \"\"\n",
     "    output = None\n",
+    "    linebreak()\n",
+    "    printmap(current_room)\n",
     "    \n",
     "    for item in object_relations[current_room[\"name\"]]:\n",
     "        if(item[\"name\"] == item_name):\n",
-    "            output = \"You examine \" + item_name + \". \"\n",
+    "            output = \"You examine \" + item_name.upper() + \". \"\n",
     "            if(item[\"type\"] == \"door\"):\n",
     "                have_key = False\n",
     "                for key in game_state[\"keys_collected\"]:\n",
@@ -276,7 +308,7 @@
     "                        game_state[\"keys_collected\"].append(item_found)\n",
     "                    else:\n",
     "                        game_state[\"items_collected\"].append(item_found)\n",
-    "                    output += \"You find \" + item_found[\"name\"] + \".\"\n",
+    "                    output += \"You find \" + item_found[\"name\"].upper() + \".\"\n",
     "                else:\n",
     "                    output += \"There isn't anything interesting about it.\"\n",
     "            print(output)\n",
@@ -289,10 +321,10 @@
     "        if(next_room == game_state[\"target_room\"]):\n",
     "            item_needed = get_item_needed()\n",
     "            if item_needed in game_state[\"items_collected\"]:\n",
-    "                print(\"Luckily you have \", item_needed[\"name\"], \"!\")\n",
+    "                print(\"Luckily you have \", item_needed[\"name\"].upper(), \"!\")\n",
     "                play_room(next_room)\n",
     "            else:\n",
-    "                print(\"You can't leave! You need\", item_needed[\"name\"], \"!\")\n",
+    "                print(\"You can't leave! You need\", item_needed[\"name\"].upper(), \"!\")\n",
     "                play_room(current_room)\n",
     "        else:\n",
     "            play_room(next_room)\n",
@@ -320,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -328,16 +360,88 @@
      "output_type": "stream",
      "text": [
       "You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\n",
-      "You are now in game room\n",
-      "What would you like to do? Type 'explore' or 'examine'? skip\n",
-      "You are now in living room\n",
+      "\n",
+      "\n",
+      "\n",
+      "You are now in GAME ROOM.\n",
+      "What would you like to do? Type 'explore' or 'examine'? skipfail\n",
+      "\n",
+      "\n",
+      "\n",
+      "You are now in LIVING ROOM.\n",
+      "What would you like to do? Type 'explore' or 'examine'? explore\n",
+      "\n",
+      "\n",
+      "\n",
+      "+------+-------------+----D---+\n",
+      "|      |             |        |\n",
+      "|      |  BEDROOM 2  |        |\n",
+      "| GAME |             | LIVING |\n",
+      "| ROOM |------B------+  ROOM  |\n",
+      "|      |             |    *   |\n",
+      "|      A  BEDROOM 1  C        |\n",
+      "|      |             |        |\n",
+      "+------+-------------+--------+\n",
+      "You explore the room. This is living room. You find DINING TABLE, COAT HANGER, DOOR D, DOOR C\n",
+      "\n",
+      "\n",
+      "\n",
+      "You are now in LIVING ROOM.\n",
       "What would you like to do? Type 'explore' or 'examine'? examine\n",
       "What would you like to examine? door d\n",
-      "You examine door d. You unlock it with a key you have.\n",
+      "\n",
+      "\n",
+      "\n",
+      "+------+-------------+----D---+\n",
+      "|      |             |        |\n",
+      "|      |  BEDROOM 2  |        |\n",
+      "| GAME |             | LIVING |\n",
+      "| ROOM |------B------+  ROOM  |\n",
+      "|      |             |    *   |\n",
+      "|      A  BEDROOM 1  C        |\n",
+      "|      |             |        |\n",
+      "+------+-------------+--------+\n",
+      "You examine DOOR D. You unlock it with a key you have.\n",
       "Do you want to go to the next room? Enter 'yes' or 'no' yes\n",
-      "Congrats! You're about to go outside but you open the door and see that it's rainy.\n",
-      "Luckily you have  umbrella !\n",
+      "Congrats! You're about to go outside but you open the door and see that it's sunny.\n",
+      "You can't leave! You need SUNGLASSES !\n",
+      "\n",
+      "\n",
+      "\n",
+      "You are now in LIVING ROOM.\n",
+      "What would you like to do? Type 'explore' or 'examine'? skip\n",
+      "\n",
+      "\n",
+      "\n",
+      "You are now in LIVING ROOM.\n",
+      "What would you like to do? Type 'explore' or 'examine'? examine\n",
+      "What would you like to examine? door d\n",
+      "\n",
+      "\n",
+      "\n",
+      "+------+-------------+----D---+\n",
+      "|      |             |        |\n",
+      "|      |  BEDROOM 2  |        |\n",
+      "| GAME |             | LIVING |\n",
+      "| ROOM |------B------+  ROOM  |\n",
+      "|      |             |    *   |\n",
+      "|      A  BEDROOM 1  C        |\n",
+      "|      |             |        |\n",
+      "+------+-------------+--------+\n",
+      "You examine DOOR D. You unlock it with a key you have.\n",
+      "Do you want to go to the next room? Enter 'yes' or 'no' yes\n",
+      "Congrats! You're about to go outside but you open the door and see that it's sunny.\n",
+      "Luckily you have  SUNGLASSES !\n",
       "Congrats! You escaped the room!\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
       "\n",
       "\n",
       "\n",
