--- a/your-code/continued_weather_flow.ipynb
+++ b/your-code/continued_weather_flow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
     "    explore (list all items in this room) or examine an item found here.\n",
     "    \"\"\"\n",
     "    game_state[\"current_room\"] = room\n",
-    "    if(game_state[\"current_room\"] == game_state[\"target_room\"]) and len(game_state[\"current_weather\"]) == 1:\n",
+    "    if(game_state[\"current_room\"] == game_state[\"target_room\"]):\n",
     "        print(\"Congrats! You escaped the room!\")\n",
     "    else:\n",
     "        \n",
@@ -248,12 +248,16 @@
     "        linebreak()\n",
     "        \n",
     "        print(\"You are now in \" + room[\"name\"].upper() + \".\")\n",
-    "        intended_action = input(\"What would you like to do? Type 'explore' or 'examine'? \").strip()\n",
+    "        intended_action = input(\"What would you like to do? Type 'explore', 'examine' or 'my items'? \").strip()\n",
     "        if intended_action == \"explore\":\n",
     "            explore_room(room)\n",
     "            play_room(room)\n",
     "        elif intended_action == \"examine\":\n",
     "            examine_item(input(\"What would you like to examine? \").strip())\n",
+    "        elif intended_action == \"my items\":\n",
+    "            print(\"You have:\",\", \".join([item[\"name\"].upper() for item in game_state[\"items_collected\"]]))\n",
+    "            print(\", \".join([item[\"name\"].upper() for item in game_state[\"keys_collected\"]]))\n",
+    "            play_room(game_state[\"current_room\"])\n",
     "            \n",
     "        # CHEAT TO REACH LAST ROOM\n",
     "        elif intended_action == \"skip\":\n",
@@ -293,26 +297,35 @@
     "            return room\n",
     "\n",
     "def get_item_needed():\n",
-    "    t = float(input(\"Congrats! You're about to go outside, but you need to check the weather first. What is the temperature in celsius today? \").strip())\n",
-    "    lst = list(weather.keys())\n",
-    "    if -20<t<0:\n",
-    "        print(\"It's SNOWING!\")\n",
-    "        weather_outside = \"snowing\"\n",
-    "        game_state[\"current_weather\"].append(weather_outside)\n",
-    "        return weather_outside, weather.get(weather_outside)\n",
-    "    elif 50>t>20:\n",
-    "        print(\"It's SUNNY!\")\n",
-    "        weather_outside = \"sunny\"\n",
-    "        game_state[\"current_weather\"].append(weather_outside)\n",
-    "        return weather_outside, weather.get(weather_outside)\n",
-    "    elif 0 <= t <=20:\n",
-    "        print(\"It's RAINY!\")\n",
-    "        weather_outside = \"rainy\"\n",
-    "        game_state[\"current_weather\"].append(weather_outside)\n",
+    "    if len(game_state[\"current_weather\"])>0:\n",
+    "        weather_outside = game_state[\"current_weather\"][0]\n",
     "        return weather_outside, weather.get(weather_outside)\n",
     "    else:\n",
-    "        print(\"It's got to be between -10 and 40 celsius.\")\n",
-    "        get_item_needed()\n",
+    "        while True:\n",
+    "            t = input(\"Congrats! You're about to go outside, but you need to check the weather first. What is the temperature in celsius today? \").strip()\n",
+    "            if t.isdigit():\n",
+    "                t = float(t)\n",
+    "                break\n",
+    "        \n",
+    "        lst = list(weather.keys())\n",
+    "        if -20<t<0:\n",
+    "            #print(\"It's SNOWING!\")\n",
+    "            weather_outside = \"snowing\"\n",
+    "            game_state[\"current_weather\"].append(weather_outside)\n",
+    "            return weather_outside, weather.get(weather_outside)\n",
+    "        elif 50>t>20:\n",
+    "            #print(\"It's SUNNY!\")\n",
+    "            weather_outside = \"sunny\"\n",
+    "            game_state[\"current_weather\"].append(weather_outside)\n",
+    "            return weather_outside, weather.get(weather_outside)\n",
+    "        elif 0 <= t <=20:\n",
+    "            #print(\"It's RAINY!\")\n",
+    "            weather_outside = \"rainy\"\n",
+    "            game_state[\"current_weather\"].append(weather_outside)\n",
+    "            return weather_outside, weather.get(weather_outside)\n",
+    "        else:\n",
+    "            print(\"It's got to be between -10 and 40 celsius.\")\n",
+    "            get_item_needed()\n",
     "\n",
     "        \n",
     "def examine_item(item_name):\n",
@@ -345,17 +358,6 @@
     "                    next_room = get_next_room_of_door(item, current_room)\n",
     "                else:\n",
     "                    output += \"It is locked but you don't have the key.\"\n",
-    "            elif(item[\"type\"] == \"door\") and item_needed == get_item_needed():\n",
-    "                print(\"This part works\")\n",
-    "                have_object = False\n",
-    "                for object in game_state[\"items_collected\"]:\n",
-    "                    if(object[\"target\"] == item):\n",
-    "                        have_object = True\n",
-    "                if(have_object):\n",
-    "                    output += \"You're ready for the weather!\"\n",
-    "                    next_room = get_next_room_of_door(item, current_room)\n",
-    "                else:\n",
-    "                    output += \"You don't seem ready for the weather. Find your gear.\"\n",
     "            else:\n",
     "                if(item[\"name\"] in object_relations and len(object_relations[item[\"name\"]])>0):\n",
     "                    item_found = object_relations[item[\"name\"]].pop()\n",
@@ -373,14 +375,14 @@
     "        print(\"The item you requested is not found in the current room.\")\n",
     "    \n",
     "    if(next_room and input(\"Do you want to go to the next room? Enter 'yes' or 'no' \").strip() == 'yes'):\n",
-    "        if(next_room == game_state[\"target_room\"]) and len(game_state[\"current_weather\"]) == 0:\n",
-    "            item_needed = get_item_needed()\n",
+    "        if(next_room == game_state[\"target_room\"]):\n",
+    "            _, item_needed = get_item_needed()\n",
     "            have_gear = False\n",
-    "            if item_needed in game_state[\"items_collected\"]:\n",
+    "            if item_needed in [item[\"name\"] for item in game_state[\"items_collected\"]]:\n",
     "                print(\"Luckily you have your gear and you are ready for the weather!\")\n",
     "                play_room(next_room)\n",
     "            else:\n",
-    "                print(\"You can't leave! You need proper gear!\")\n",
+    "                print(\"It's\",game_state[\"current_weather\"][0].upper() + \"!\",\"You can't leave! You need proper gear!\")\n",
     "                play_room(current_room)\n",
     "\n",
     "            \n",
@@ -392,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -404,12 +406,12 @@
       "\n",
       "\n",
       "You are now in GAME ROOM.\n",
-      "What would you like to do? Type 'explore' or 'examine'? skipfail\n",
+      "What would you like to do? Type 'explore', 'examine' or 'my items'? skipfail\n",
       "\n",
       "\n",
       "\n",
       "You are now in LIVING ROOM.\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
+      "What would you like to do? Type 'explore', 'examine' or 'my items'? examine\n",
       "What would you like to examine? door d\n",
       "\n",
       "\n",
@@ -425,39 +427,18 @@
       "+------+-------------+--------+\n",
       "You examine DOOR D. You unlock it with a key you have.\n",
       "Do you want to go to the next room? Enter 'yes' or 'no' yes\n",
-      "Congrats! You're about to go outside, but you need to check the weather first. What is the temperature in celsius today? 7\n",
-      "It's RAINY!\n",
-      "You can't leave! You need proper gear!\n",
+      "Congrats! You're about to go outside, but you need to check the weather first. What is the temperature in celsius today? 5\n",
+      "It's RAINY! You can't leave! You need proper gear!\n",
       "\n",
       "\n",
       "\n",
       "You are now in LIVING ROOM.\n",
-      "What would you like to do? Type 'explore' or 'examine'? exaine\n",
-      "Not sure what you mean. Type 'explore' or 'examine'. \n",
+      "What would you like to do? Type 'explore', 'examine' or 'my items'? skip\n",
       "\n",
       "\n",
       "\n",
       "You are now in LIVING ROOM.\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? coat hanger\n",
-      "\n",
-      "\n",
-      "\n",
-      "+------+-------------+----D---+\n",
-      "|      |             |        |\n",
-      "|      |  BEDROOM 2  |        |\n",
-      "| GAME |             | LIVING |\n",
-      "| ROOM |------B------+  ROOM  |\n",
-      "|      |             |    *   |\n",
-      "|      A  BEDROOM 1  C        |\n",
-      "|      |             |        |\n",
-      "+------+-------------+--------+\n",
-      "You examine COAT HANGER. You find UMBRELLA.\n",
-      "\n",
-      "\n",
-      "\n",
-      "You are now in LIVING ROOM.\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
+      "What would you like to do? Type 'explore', 'examine' or 'my items'? examine\n",
       "What would you like to examine? door d\n",
       "\n",
       "\n",
@@ -473,10 +454,8 @@
       "+------+-------------+--------+\n",
       "You examine DOOR D. You unlock it with a key you have.\n",
       "Do you want to go to the next room? Enter 'yes' or 'no' yes\n",
+      "Luckily you have your gear and you are ready for the weather!\n",
       "Congrats! You escaped the room!\n",
-      "\n",
-      "\n",
-      "\n",
       "\n",
       "\n",
       "\n",
@@ -503,121 +482,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_item_needed():\n",
-    "    t = random.randrange(-10, 40, 1)\n",
-    "    lst = list(weather.keys())\n",
-    "    output = \"Congrats! You're about to go outside but you open the door and see that it's \"\n",
-    "    if t<0:\n",
-    "        output += lst[2] + \".\"\n",
-    "        print(output)\n",
-    "        return weather[\"snowing\"]\n",
-    "    elif t>20:\n",
-    "        output += lst[0] + \".\"\n",
-    "        print(output)\n",
-    "        return weather[\"sunny\"]\n",
-    "    else:\n",
-    "        output += lst[1] + \".\"\n",
-    "        print(output)\n",
-    "        return weather[\"rainy\"]\n",
-    "    \n",
-    "    \n",
-    "item_needed = get_item_needed()\n",
-    "print(item_needed[\"name\"].upper())\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sunny = {\n",
-    "    \"name\": \"sunny\",\n",
-    "    \"type\": \"weather\",\n",
-    "}\n",
-    "\n",
-    "rainy = {\n",
-    "    \"name\": \"rainy\",\n",
-    "    \"type\": \"weather\",\n",
-    "}\n",
-    "\n",
-    "snowing = {\n",
-    "    \"name\": \"snowing\",\n",
-    "    \"type\": \"weather\",\n",
-    "}\n",
-    "\n",
-    "sunglasses = {\n",
-    "    \"name\": \"sunglasses\",\n",
-    "    \"type\": \"object\",\n",
-    "    \"target\": sunny,\n",
-    "}\n",
-    "\n",
-    "umbrella = {\n",
-    "    \"name\": \"umbrella\",\n",
-    "    \"type\": \"object\",\n",
-    "    \"target\": rainy,\n",
-    "}\n",
-    "\n",
-    "snow_boots = {\n",
-    "    \"name\": \"snow boots\",\n",
-    "    \"type\": \"object\",\n",
-    "    \"target\": snowing,\n",
-    "}\n",
-    "\n",
-    "weather = {\n",
-    "    \"sunny\": \"sunglasses\",\n",
-    "    \"rainy\": \"umbrella\",\n",
-    "    \"snowing\": \"snow_boots\",\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Congrats! You're about to go outside, but you need to check the weather first. What is the temperature in celsius today? 8\n",
-      "It's RAINY!\n",
-      "umbrella\n"
-     ]
-    }
-   ],
-   "source": [
-    "def get_item_needed():\n",
-    "    t = float(input(\"Congrats! You're about to go outside, but you need to check the weather first. What is the temperature in celsius today? \").strip())\n",
-    "    lst = list(weather.keys())\n",
-    "    if -20<t<0:\n",
-    "        print(\"It's SNOWING!\")\n",
-    "        weather_outside = \"snowing\"\n",
-    "        return weather.get(weather_outside)\n",
-    "    elif 50>t>20:\n",
-    "        print(\"It's SUNNY!\")\n",
-    "        weather_outside = \"sunny\"\n",
-    "        return weather.get(weather_outside)\n",
-    "    elif 0 <= t <=20:\n",
-    "        print(\"It's RAINY!\")\n",
-    "        weather_outside = \"rainy\"\n",
-    "        return weather.get(weather_outside)\n",
-    "    else:\n",
-    "        print(\"It's got to be between -10 and 40 celsius.\")\n",
-    "        get_item_needed()\n",
-    "\n",
-    "item_needed == get_item_needed()\n",
-    "\n",
-    "print(item_needed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -626,6 +490,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
