--- a/your-code/sample-code.ipynb
+++ b/your-code/sample-code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -257,118 +257,33 @@
      "text": [
       "You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\n",
       "You are now in game room\n",
+      "What would you like to do? Type 'explore' or 'examine'? explore\n",
+      "You explore the room. This is game room. You find couch, piano, door a\n",
+      "You are now in game room\n",
       "What would you like to do? Type 'explore' or 'examine'? examine\n",
       "What would you like to examine? piano\n",
       "You examine piano. You find key for door a.\n",
       "You are now in game room\n",
       "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? door a\n",
-      "You examine door a. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Enter 'yes' or 'no': examine queen bed\n",
-      "You are now in game room\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? queen bed\n",
-      "The item you requested is not found in the current room.\n",
+      "What would you like to examine? couch\n",
+      "You examine couch. There isn't anything interesting about it.\n",
       "You are now in game room\n",
       "What would you like to do? Type 'explore' or 'examine'? examine\n",
       "What would you like to examine? door a\n",
       "You examine door a. You unlock it with a key you have.\n",
       "Do you want to go to the next room? Enter 'yes' or 'no': yes\n",
       "You are now in bedroom 1\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? queen bed\n",
-      "You examine queen bed. You find key for door b.\n",
-      "You are now in bedroom 1\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? door b\n",
-      "You examine door b. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Enter 'yes' or 'no': yes\n",
-      "You are now in bedroom 2\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? dresser\n",
-      "You examine dresser. You find key for door d.\n",
-      "You are now in bedroom 2\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? double bed\n",
-      "You examine double bed. You find key for door c.\n",
-      "You are now in bedroom 2\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? door b\n",
-      "You examine door b. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Enter 'yes' or 'no': yes\n",
-      "You are now in bedroom 1\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? door c\n",
-      "You examine door c. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Enter 'yes' or 'no': explore\n",
-      "You are now in bedroom 1\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? door c\n",
-      "You examine door c. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Enter 'yes' or 'no': yes\n",
-      "You are now in living room\n",
       "What would you like to do? Type 'explore' or 'examine'? explore\n",
-      "You explore the room. This is living room. You find dining table, door d, door c\n",
-      "You are now in living room\n",
+      "You explore the room. This is bedroom 1. You find door a, door b, door c, queen bed\n",
+      "You are now in bedroom 1\n",
       "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? door d\n",
-      "You examine door d. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Enter 'yes' or 'no': no\n",
-      "You are now in living room\n",
+      "What would you like to examine? door b\n",
+      "You examine door b. It is locked but you don't have the key.\n",
+      "You are now in bedroom 1\n",
       "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? dining table\n",
-      "You examine dining table. There isn't anything interesting about it.\n",
-      "You are now in living room\n",
-      "What would you like to do? Type 'explore' or 'examine'? examine\n",
-      "What would you like to examine? door d\n",
-      "You examine door d. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Enter 'yes' or 'no': yes\n",
-      "Congrats! You escaped the room!\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
+      "What would you like to examine? door b\n",
+      "You examine door b. It is locked but you don't have the key.\n",
+      "You are now in bedroom 1\n"
      ]
     }
    ],
