changed greeting and temperature check text

--- a/your-code/continued_weather_flow.ipynb
+++ b/your-code/continued_weather_flow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,10 @@
     "    \"\"\"\n",
     "    Start the game\n",
     "    \"\"\"\n",
+    "    print(\" _____   ___  ___  ___ _____  ______ _____  ________  ___\\n|  __ \\ / _ \\ |  \\/  ||  ___| | ___ \\  _  ||  _  |  \\/  |\\n| |  \\// /_\\ \\| .  . || |__   | |_/ / | | || | | | .  . |\\n| | __ |  _  || |\\/| ||  __|  |    /| | | || | | | |\\/| |\\n| |_\\ \\| | | || |  | || |___  | |\\  \\ \\_/ /\\ \\_/ / |  | |\\n \\____/\\_| |_/\\_|  |_/\\____/  \\_| \\_|\\___/  \\___/\\_|  |_/\\n\\n\")\n",
     "    print(\"You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\")\n",
+    "    \n",
+    "    \n",
     "    play_room(game_state[\"current_room\"])\n",
     "\n",
     "def play_room(room):\n",
@@ -303,7 +306,7 @@
     "        return weather_outside, weather.get(weather_outside)\n",
     "    else:\n",
     "        while True:\n",
-    "            t = input(\"Congrats! You're about to go outside, but you need to check the weather first. What is the temperature in celsius today? \").strip()\n",
+    "            t = input(\"You're about to go outside, but you need to check the weather first. There's a thermostat next to the door. What is the temperature in celsius today? \").strip()\n",
     "            if t.isdigit():\n",
     "                t = float(t)\n",
     "                break\n",
@@ -396,62 +399,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " _____   ___  ___  ___ _____  ______ _____  ________  ___\n",
+      "|  __ \\ / _ \\ |  \\/  ||  ___| | ___ \\  _  ||  _  |  \\/  |\n",
+      "| |  \\// /_\\ \\| .  . || |__   | |_/ / | | || | | | .  . |\n",
+      "| | __ |  _  || |\\/| ||  __|  |    /| | | || | | | |\\/| |\n",
+      "| |_\\ \\| | | || |  | || |___  | |\\  \\ \\_/ /\\ \\_/ / |  | |\n",
+      " \\____/\\_| |_/\\_|  |_/\\____/  \\_| \\_|\\___/  \\___/\\_|  |_/\n",
+      "\n",
+      "\n",
       "You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\n",
       "\n",
       "\n",
       "\n",
       "You are now in GAME ROOM.\n",
-      "What would you like to do? Type 'explore', 'examine' or 'my items'? explore\n",
-      "\n",
-      "\n",
-      "\n",
-      "+------+-------------+----D---+\n",
-      "|      |             |        |\n",
-      "|      |  BEDROOM 2  |        |\n",
-      "| GAME |             | LIVING |\n",
-      "| ROOM |------B------+  ROOM  |\n",
-      "|  *   |             |        |\n",
-      "|      A  BEDROOM 1  C        |\n",
-      "|      |             |        |\n",
-      "+------+-------------+--------+\n",
-      "You explore the room. This is game room. You find COUCH, PIANO, DOOR A\n",
-      "\n",
-      "\n",
-      "\n",
-      "You are now in GAME ROOM.\n",
-      "What would you like to do? Type 'explore', 'examine' or 'my items'? exaimne\n",
-      "Not sure what you mean. Type 'explore' or 'examine'. \n",
-      "\n",
-      "\n",
-      "\n",
-      "You are now in GAME ROOM.\n",
-      "What would you like to do? Type 'explore', 'examine' or 'my items'? examine\n",
-      "What would you like to examine? couch\n",
-      "\n",
-      "\n",
-      "\n",
-      "+------+-------------+----D---+\n",
-      "|      |             |        |\n",
-      "|      |  BEDROOM 2  |        |\n",
-      "| GAME |             | LIVING |\n",
-      "| ROOM |------B------+  ROOM  |\n",
-      "|  *   |             |        |\n",
-      "|      A  BEDROOM 1  C        |\n",
-      "|      |             |        |\n",
-      "+------+-------------+--------+\n",
-      "You examine COUCH. There isn't anything interesting about it.\n",
-      "\n",
-      "\n",
-      "\n",
-      "You are now in GAME ROOM.\n",
-      "What would you like to do? Type 'explore', 'examine' or 'my items'? skipfail\n",
+      "What would you like to do? Type 'explore', 'examine' or 'my items'? skip\n",
       "\n",
       "\n",
       "\n",
@@ -472,12 +440,15 @@
       "+------+-------------+--------+\n",
       "You examine DOOR D. You unlock it with a key you have.\n",
       "Do you want to go to the next room? Enter 'yes' or 'no' yes\n",
-      "Congrats! You're about to go outside, but you need to check the weather first. What is the temperature in celsius today? 34\n",
-      "It's SUNNY! You can't leave! You need proper gear!\n",
+      "You're about to go outside, but you need to check the weather first. There's a thermostat next to the door. What is the temperature in celsius today? 34\n",
+      "Luckily you have your gear and you are ready for the weather!\n",
+      "Congrats! You escaped the room!\n",
       "\n",
       "\n",
       "\n",
-      "You are now in LIVING ROOM.\n"
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
