corrected game title

--- a/your-code/continued_weather_flow.ipynb
+++ b/your-code/continued_weather_flow.ipynb
@@ -231,9 +231,8 @@
     "    \"\"\"\n",
     "    Start the game\n",
     "    \"\"\"\n",
-    "    print(\" _____   ___  ___  ___ _____  ______ _____  ________  ___\\n|  __ \\ / _ \\ |  \\/  ||  ___| | ___ \\  _  ||  _  |  \\/  |\\n| |  \\// /_\\ \\| .  . || |__   | |_/ / | | || | | | .  . |\\n| | __ |  _  || |\\/| ||  __|  |    /| | | || | | | |\\/| |\\n| |_\\ \\| | | || |  | || |___  | |\\  \\ \\_/ /\\ \\_/ / |  | |\\n \\____/\\_| |_/\\_|  |_/\\____/  \\_| \\_|\\___/  \\___/\\_|  |_/\\n\\n\")\n",
+    "    print(\" _____                          ______                      \\n|  ___|                         | ___ \\                     \\n| |__ ___  ___ __ _ _ __   ___  | |_/ /___   ___  _ __ ___  \\n|  __/ __|/ __/ _` | '_ \\ / _ \\ |    // _ \\ / _ \\| '_ ` _ \\ \\n| |__\\__ \\ (_| (_| | |_) |  __/ | |\\ \\ (_) | (_) | | | | | |\\n\\____/___/\\___\\__,_| .__/ \\___| \\_| \\_\\___/ \\___/|_| |_| |_|\\n                   | |\\n                   |_|\\n\\n\")\n",
     "    print(\"You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\")\n",
-    "    \n",
     "    \n",
     "    play_room(game_state[\"current_room\"])\n",
     "\n",
@@ -259,8 +258,12 @@
     "        elif intended_action == \"examine\":\n",
     "            examine_item(input(\"What would you like to examine? \").strip().lower())\n",
     "        elif intended_action == \"my items\":\n",
-    "            print(\"You have:\",\", \".join([item[\"name\"].upper() for item in game_state[\"items_collected\"]]))\n",
-    "            print(\", \".join([item[\"name\"].upper() for item in game_state[\"keys_collected\"]]))\n",
+    "            print(\"You have:\")\n",
+    "            if len(game_state[\"keys_collected\"])==0:\n",
+    "                print(\"Empty pockets... :(\")\n",
+    "            else:\n",
+    "                print(\", \".join([item[\"name\"].upper() for item in game_state[\"keys_collected\"]]))\n",
+    "                print(\", \".join([item[\"name\"].upper() for item in game_state[\"items_collected\"]]))\n",
     "            play_room(game_state[\"current_room\"])\n",
     "            \n",
     "        # CHEAT TO REACH LAST ROOM\n",
@@ -399,19 +402,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " _____   ___  ___  ___ _____  ______ _____  ________  ___\n",
-      "|  __ \\ / _ \\ |  \\/  ||  ___| | ___ \\  _  ||  _  |  \\/  |\n",
-      "| |  \\// /_\\ \\| .  . || |__   | |_/ / | | || | | | .  . |\n",
-      "| | __ |  _  || |\\/| ||  __|  |    /| | | || | | | |\\/| |\n",
-      "| |_\\ \\| | | || |  | || |___  | |\\  \\ \\_/ /\\ \\_/ / |  | |\n",
-      " \\____/\\_| |_/\\_|  |_/\\____/  \\_| \\_|\\___/  \\___/\\_|  |_/\n",
+      " _____                          ______                      \n",
+      "|  ___|                         | ___ \\                     \n",
+      "| |__ ___  ___ __ _ _ __   ___  | |_/ /___   ___  _ __ ___  \n",
+      "|  __/ __|/ __/ _` | '_ \\ / _ \\ |    // _ \\ / _ \\| '_ ` _ \\ \n",
+      "| |__\\__ \\ (_| (_| | |_) |  __/ | |\\ \\ (_) | (_) | | | | | |\n",
+      "\\____/___/\\___\\__,_| .__/ \\___| \\_| \\_\\___/ \\___/|_| |_| |_|\n",
+      "                   | |\n",
+      "                   |_|\n",
       "\n",
       "\n",
       "You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\n",
@@ -419,13 +424,7 @@
       "\n",
       "\n",
       "You are now in GAME ROOM.\n",
-      "What would you like to do? Type 'explore', 'examine' or 'my items'? skip\n",
-      "\n",
-      "\n",
-      "\n",
-      "You are now in LIVING ROOM.\n",
-      "What would you like to do? Type 'explore', 'examine' or 'my items'? examine\n",
-      "What would you like to examine? door d\n",
+      "What would you like to do? Type 'explore', 'examine' or 'my items'? explore\n",
       "\n",
       "\n",
       "\n",
@@ -434,21 +433,15 @@
       "|      |  BEDROOM 2  |        |\n",
       "| GAME |             | LIVING |\n",
       "| ROOM |------B------+  ROOM  |\n",
-      "|      |             |    *   |\n",
+      "|  *   |             |        |\n",
       "|      A  BEDROOM 1  C        |\n",
       "|      |             |        |\n",
       "+------+-------------+--------+\n",
-      "You examine DOOR D. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Enter 'yes' or 'no' yes\n",
-      "You're about to go outside, but you need to check the weather first. There's a thermostat next to the door. What is the temperature in celsius today? 34\n",
-      "Luckily you have your gear and you are ready for the weather!\n",
-      "Congrats! You escaped the room!\n",
+      "You explore the room. This is game room. You find COUCH, PIANO, DOOR A\n",
       "\n",
       "\n",
       "\n",
-      "\n",
-      "\n",
-      "\n"
+      "You are now in GAME ROOM.\n"
      ]
     }
    ],
